# pyGCM

./: .travis.yml  LICENSE  README.md  examples.ipynb  pyproject.toml  requirements.txt  setup.py
pyGCM/: __init__.py  gcm_test.py  residual_methods.py
tests/: test_gcm.py
